syntax = "proto3";
import "google/protobuf/timestamp.proto";

package api.v2;

message Message {
  int32 id = 1;
  string name = 2;
  string email = 3;

  google.protobuf.Timestamp last_updated = 4;

  string newField1 = 5;
  string newField2 = 6;
}
